--- a/index.css
+++ b/index.css
@@ -7,16 +7,17 @@
 .container {
   width: 100vw;
   height: 100vh;
-  
   /* border: 1px solid black; */
 }
+
 .bg-img {
-  background-image: url(./Assets/background-image.png);
+  background-image: url(Assets/background-image.png);
   background-position: center;
   background-repeat: no-repeat;
-  height:70vh;
-
+  height: 70vh;
+  /* border: 1px solid black; */
 }
+
 header {
   display: flex;
   justify-content: space-around;
@@ -78,7 +79,7 @@ nav ul a {
 .btn-01 {
   position: absolute;
   left: 46%;
-  top: 10%;
+  top: 13%;
 }
 
 .btn-02 {
@@ -87,6 +88,19 @@ nav ul a {
   top: 25%;
 }
 
+.main {
+  width: 100%;
+  height: 100vh;
+  /* border: 1px solid black; */
+  position: relative;
+  background-image: url(Assets/hero-image.png);
+  background-position:right top 24px ;
+  background-repeat: no-repeat; 
+}
+main {
+  /* border: 1px solid black; */
+  
+}
 .bg-container {
   display: flex;
   flex-direction: row;
@@ -94,22 +108,16 @@ nav ul a {
   /* width: 100vw; */
   /* height: 100vh; */
 }
-.main { 
-  position: relative;
-  background-image: url(./Assets/hero-image.png);
-  background-position: right top 26px;
-  background-repeat: no-repeat;
-  background-size: 60% 100% ;
-  
-}
+
 .hero-img {
   float: right;
   width: 50vw;
   position: absolute;
   right: 138px;
   bottom: 10px;
+  object-fit: cover;
   /* border: 1px solid black; */
-  /* width: 50%; */
+  width: 50%;
 }
 
 .hero-txt {
@@ -119,7 +127,8 @@ nav ul a {
   /* height: auto; */
   padding: 100px 0px 0px 100px;
 }
-.hero-details  h1 {
+
+.hero-details h1 {
   font-size: 70px;
 }
 
@@ -128,19 +137,21 @@ nav ul a {
   color: #808080;
   margin-top: 20px;
 }
+
 .hero-btn {
   display: flex;
-  gap: 10px;
+  gap: 24px;
   /* justify-content: space-between; */
   width: 350px;
   margin-top: 30px;
   /* border: 1px solid black; */
 }
+
 .btn-5 {
   color: #ed017f;
   background-color: #ffffff;
   border: 1px solid #ed017f;
-  
+
 }
 
 .contact-detail {
@@ -161,4 +172,3 @@ nav ul a {
   height: 25px;
   margin-left: 15px;
 }
-
